micro-depls/00-core-connectivity-k8s/k8s-config/manifests/60-ops-portal/ops-portal-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-portal
  namespace: ops-portal
  labels:
    app: ops-portal
  annotations:
    configmap.reloader.stakater.com/reload: "nginx-config,nginx-default-config,web-files"
    secret.reloader.stakater.com/reload: "ops-portal-tls"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ops-portal
  template:
    metadata:
      labels:
        app: ops-portal
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: nginx-default-config-volume
          configMap:
            name: nginx-default-config
        - name: web-files-volume
          configMap:
            name: web-files
      containers:
      - image: nginx:1.21.5
        name: nginx
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            readOnly: true
          - name: nginx-default-config-volume
            mountPath: /etc/nginx/conf.d
          - name: web-files-volume
            subPath: index.html
            mountPath: "/var/www/htdocs/index.html"
          - name: web-files-volume
            subPath: common.css
            mountPath: "/var/www/htdocs/common.css"
          - name: web-files-volume
            subPath: dark.css
            mountPath: "/var/www/htdocs/dark.css"
          - name: web-files-volume
            subPath: light.css
            mountPath: "/var/www/htdocs/light.css"
          - name: web-files-volume
            subPath: code.js
            mountPath: "/var/www/htdocs/code.js"
      nodeSelector:
        bosh.io/name: "agents"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - ops-portal
            topologyKey: "kubernetes.io/hostname"
