micro-depls/00-core-connectivity-k8s/k8s-config/manifests/60-ops-portal/ops-portal-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ops-portal
  namespace: ops-portal
  labels:
    app: ops-portal
spec:
  ports:
  - port: 80
  selector:
    app: ops-portal
