micro-depls/00-core-connectivity-k8s/k8s-config/manifests/60-ops-portal/ops-portal-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-portal
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ops-portal.((/secrets/cloudfoundry_ops_domain))
      secretName: ops-portal-tls
  rules:
    - host: ops-portal.((/secrets/cloudfoundry_ops_domain))
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-portal
                port:
                  number: 80
