micro-depls/00-core-connectivity-k8s/k8s-config/manifests/60-ops-portal/ops-portal-oauth-ingress.yaml
---
#--- Additionnal ingress with specific path for oauth2 proxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-portal-oauth
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ops-portal.((/secrets/cloudfoundry_ops_domain))
      secretName: ops-portal-tls
  rules:
    - host: ops-portal.((/secrets/cloudfoundry_ops_domain))
      http:
        paths:
        - path: /oauth2
          pathType: ImplementationSpecific
          backend:
            service:
              name: oauth2-proxy
              port:
                number: 80
